--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "react-router-dom": "5.1.2"
   },
   "devDependencies": {
-    "@babel/cli": "7.7.4",
+    "@babel/cli": "^7.15.4",
     "@babel/core": "7.7.4",
     "@babel/plugin-proposal-class-properties": "7.7.4",
     "@babel/preset-env": "7.7.4",
@@ -45,7 +45,7 @@
     "supertest": "4.0.2",
     "webpack": "4.41.2",
     "webpack-cli": "3.3.10",
-    "webpack-dev-server": "^3.11.2"
+    "webpack-dev-server": "^4.1.0"
   },
   "engines": {
     "node": "^12.0.0"
